...

        app:searchIcon="@drawable/ic_search_green_24dp"
        app:goIcon="@drawable/ic_search_green_24dp"


        android:focusable="true"
        android:nextFocusForward="@+id/mainActivity_recycerView"
        android:nextFocusDown="@+id/mainActivity_recycerView"


        android:foregroundTint="@android:color/black" />

    <android.support.design.widget.AppBarLayout
...
